--- a/GUI/templates/index.html
+++ b/GUI/templates/index.html
@@ -178,7 +178,6 @@
                 <a class="active item" data-tab="run-report">Run Report</a>
                 <a class="item" data-tab="sample-report">Sample Report</a>
                 <a class="item" data-tab="downloads">Downloads</a>
-                <a class="item" data-tab="amplicon-data">Amplicon Data</a>
             </div>
         </div>
         <div class="right-panel">
@@ -186,7 +185,6 @@
                 <a class="active item" data-tab="run-report">Run Report</a>
                 <a class="item" data-tab="sample-report">Sample Report</a>
                 <a class="item" data-tab="downloads">Downloads</a>
-                <a class="item" data-tab="amplicon-data">Amplicon Data</a>
             </div>
             
             <div class="ui bottom attached active tab segment" data-tab="run-report">
@@ -208,6 +206,7 @@
                     <div class="ui buttons">
                         <button class="ui button download-button" data-type="HapCUT2">Download HapCUT2 log</button>
                         <button class="ui button download-button" data-type="WhatsHap">Download WhatsHap log</button>
+                        <button class="ui button download-button" data-type="Pipeline">Download Pipeline log</button>
                     </div>
                 </div>
             </div>
