--- a/GUI/templates/index.html
+++ b/GUI/templates/index.html
@@ -151,7 +151,7 @@
     </style>
 </head>
 <body>
-    <div class="banner">Long-read Sequencing Reports</div>
+    <div class="banner">Long-read Amplicon Sequencing Reports (AmpMap v1.1.0)</div>
     <div class="ui container main-container">
         <div class="left-panel">
             <div class="ui form">
